add awesome books

--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
                 <a class="mail" href="mariaamaliagomezmoro@gmail.com">mariaamaliagomezmoro@gmail.com</a>
             </div>
             </footer>        
-        <section class="popup1">
-            <div class="images">
+        <section id="popup1" class="popup1">
+           <!--  <div class="images">
             <img class="mobile img" src="images/Snapshoot.png" alt="">
             <img class="desktop img" src="images/Snapshootbig.png" alt="medical illustration sets">
             </div>
@@ -246,7 +246,7 @@
                 <a><img src="images/Live.png" alt="See live button"></a>
                 <a><img src="images/Source.png" alt="See source button"></a>
             </div>
-            
+             -->
         </section>
         <script defer src="cards.js"></script>
         <script defer src="popUp.js"></script>
