add popup image

--- a/index.html
+++ b/index.html
@@ -175,11 +175,13 @@
                             <img src="images/icon-skills.svg" alt="icon skills" class="icon">
                             <h2 class="skills">Skills</h2>
                             <ul class="buttons">
-                            <li><a class="button">Codekit</a></li>
-                            <li><a class="button">GitHub</a></li>
-                            <li><a class="button">Codepen</a></li>
-                            <li><a class="button">Gitlab</a></li>
-                            <li><a class="button">Terminal</a></li>
+                                <ul class="icons">
+                                    <li><a href="https://twitter.com/AmaliaGomezMoro"><img src="images/twitter.png" alt="twitter"></a></li>
+                                    <li><a href="https://www.linkedin.com/in/Maria-Amalia-Gomez-Moro/"><img src="images/Linkedin.png" alt="Linkedin"></a></li>
+                                    <!-- <li><a href="#"><img src="images/medium.png" alt="medium"></a></li> -->
+                                    <li><a href="https://github.com/AmaliaGM"><img src="images/github.png" alt="github"></a></li>
+                                    <!-- <li><a href="#"><img src="images/angellist.png" alt="angellist"></a></li>     -->
+                                    </ul>  
                         </ul>
                         </div>        
                     </div>
