social media icons update

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <ul class="icons">
         <li><a href="https://twitter.com/AmaliaGomezMoro"><img src="images/twitter.png" alt="twitter"></a></li>
         <li><a href="https://www.linkedin.com/in/Maria-Amalia-Gomez-Moro/"><img src="images/Linkedin.png" alt="Linkedin"></a></li>
-        <!-- <li><a href="#"><img src="images/medium.png" alt="medium"></a></li> -->
+        <li><a href="https://medium.com/@mariaamaliagomezmoro"><img src="images/medium.png" alt="medium"></a></li>
         <li><a href="https://github.com/AmaliaGM"><img src="images/github.png" alt="github"></a></li>
-        <!-- <li><a href="#"><img src="images/angellist.png" alt="angellist"></a></li>     -->
+        <li><a href="https://venture.angellist.com/v/maria-amalia-gomez-moro"><img src="images/angellist.png" alt="angellist"></a></li>
         </ul>  
     </section>
      <br>
@@ -176,13 +176,13 @@
                             <h2 class="skills">Skills</h2>
                             <ul class="buttons">
                                 <ul class="icons">
-                                    <li><a href="https://twitter.com/AmaliaGomezMoro"><img src="images/twitter.png" alt="twitter"></a></li>
-                                    <li><a href="https://www.linkedin.com/in/Maria-Amalia-Gomez-Moro/"><img src="images/Linkedin.png" alt="Linkedin"></a></li>
-                                    <!-- <li><a href="#"><img src="images/medium.png" alt="medium"></a></li> -->
-                                    <li><a href="https://github.com/AmaliaGM"><img src="images/github.png" alt="github"></a></li>
-                                    <!-- <li><a href="#"><img src="images/angellist.png" alt="angellist"></a></li>     -->
-                                    </ul>  
-                        </ul>
+                                    <li><a class="button">Codekit</a></li>
+                                    <li><a class="button">GitHub</a></li>
+                                    <li><a class="button">Codepen</a></li>
+                                    <li><a class="button">Gitlab</a></li>
+                                    <li><a class="button">Terminal</a></li>
+                                </ul>  
+                            </ul>
                         </div>        
                     </div>
                 </div>
@@ -208,12 +208,12 @@
                 <ul class="icons">
                     <li><a href="https://twitter.com/AmaliaGomezMoro"><img src="images/twitter.png" alt="twitter"></a></li>
                     <li><a href="https://www.linkedin.com/in/Maria-Amalia-Gomez-Moro/"><img src="images/Linkedin.png" alt="Linkedin"></a></li>
-                    <!-- <li><a href="#"><img src="images/medium.png" alt="medium"></a></li> -->
+                    <li><a href="https://medium.com/@mariaamaliagomezmoro"><img src="images/medium.png" alt="medium"></a></li>
                     <li><a href="https://github.com/AmaliaGM"><img src="images/github.png" alt="github"></a></li>
-                    <!-- <li><a href="#"><img src="images/angellist.png" alt="angellist"></a></li>     -->  
+                    <li><a href="https://venture.angellist.com/v/maria-amalia-gomez-moro"><img src="images/angellist.png" alt="angellist"></a></li>
                 </ul>
                 <a class="mail" href="mariaamaliagomezmoro@gmail.com">mariaamaliagomezmoro@gmail.com</a>
-            </div>
+                </div>
             </footer>        
         <section id="popup1" class="popup1">
            <!--  <div class="images">
