--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
         </a>
         </nav>
     </header>
+    <header id="navbar1" class="navbar1">
+        <a href="#title"><nav class="n1" >Portfolio</nav></a>
+        <a href="#amalia"><nav class="n1">About</nav></a>
+        <a href="#aboutyou"><nav class="n1">Contact</nav></a>
+    </header>
     <section class="main">
-        <header class="navbar1">
-            <nav class="n1" href="#title">Portfolio</nav>
-            <nav class="n1" href="#me">About</nav>
-            <nav class="n1" href="#form">Contact</nav>
-        </header>
         <br>
         <br>
-        <h1 class="amalia">Hey there. I’m Amalia</h1>
+        <h1 id="amalia" class="amalia">Hey there. I’m Amalia</h1>
         <h2 class="developer">I’m a software developer</h2>
-        <p class="contact"> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, 
-            don’t hestiate to contact me.</p>
+        <p class="contact"> I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded,
+             don’t hesitate to contact me.</p>
             
         <ul class="icons">
         <li><a href="https://twitter.com/AmaliaGomezMoro"><img src="images/twitter.png" alt="twitter"></a></li>
@@ -189,7 +189,7 @@
             <br>
             <br>
             <br>
-            <div class="aboutyou">
+            <div id="aboutyou" class="aboutyou">
                 <div class="comment"><p class="aboutyou-title">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p></div>
                 <div id="form" class="form"><form class="form1" onsubmit="return sendForm()" action="https://formspree.io/f/mbjwboje" method="post">
                     <input id="name" class="textarea" type="text" placeholder="name" maxlength="30" required><br>
