--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     </header>
     <header id="navbar1" class="navbar1">
         <a href="#title"><nav class="n1" >Portfolio</nav></a>
-        <a href="#amalia"><nav class="n1">About</nav></a>
+        <a href="#main"><nav class="n1">About</nav></a>
         <a href="#aboutyou"><nav class="n1">Contact</nav></a>
     </header>
-    <section class="main">
+    <section id="main" class="main">
         <br>
         <br>
         <h1 id="amalia" class="amalia">Hey there. I’m Amalia</h1>
